<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentTop="true"
	    android:layout_margin="5dp"
	    android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_margin="5dp"
	    android:gravity="left"
	    android:orientation="horizontal" >
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:text="@string/tcp_host" />
	    
	    <EditText
	        android:id="@+id/tcp_host"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textNoSuggestions"/>
	    
    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_margin="5dp"
	    android:gravity="left"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:text="@string/tcp_port" />
	    
	    <EditText
	        android:id="@+id/tcp_port"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:text="80" >

	    </EditText>
   	    
	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_margin="5dp"
	    android:gravity="left"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:text="@string/resource_uri" />
	    
	    <EditText
	        android:id="@+id/resource_uri"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textNoSuggestions"
	        android:text="/index.html" >

	    </EditText>
   	    
	</LinearLayout>
			
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="5dp"
	    android:gravity="left"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:text="@string/wifi_address" />
	    
	    <TextView android:id="@+id/wifi_address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp" />
	    
   	    
	</LinearLayout>
		
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="15dp"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal" >
		
		<Button
	        android:id="@+id/btn_stop_service"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_stop_service" />
		
		<Button
	        android:id="@+id/btn_start_service"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_start_service" />
		
	</LinearLayout>
		
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="5dp"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal" >
		
		<Button
	        android:id="@+id/btn_open_browser"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_open_browser" />
		
		<Button
	        android:id="@+id/btn_clear_cache"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_clear_cache" />
		
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="5dp"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal" >
		
		<Button
	        android:id="@+id/btn_open_log"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_open_log" />
		
	</LinearLayout>
		    		
</LinearLayout>